@startuml

title __LONG_TERM_CA-COMMON's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.common.message {
    class pt.ulisboa.tecnico.surespace.long_term_ca.common.message.SignedRegisterEntityRequest {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.common.message {
    class pt.ulisboa.tecnico.surespace.long_term_ca.common.message.SignedRegisterEntityResponse {
    }
  }
  

  pt.ulisboa.tecnico.surespace.long_term_ca.common.message.SignedRegisterEntityRequest -up-|> pt.ulisboa.tecnico.surespace.common.message.SignedMessage
  pt.ulisboa.tecnico.surespace.long_term_ca.common.message.SignedRegisterEntityResponse -up-|> pt.ulisboa.tecnico.surespace.common.message.SignedMessage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
